# diogenes

./: .gitignore  CMakeLists.txt  DyninstInstall.cmake  FindGotcha.cmake  PythonInstall.cmake  README.md  todolist.txt
src/Autocorrect/mutatee/: Autocorrect.cpp  Autocorrect.h  AutocorrectFilenames.h  CMakeLists.txt  CPUMemorLocation.cpp  FastStackTree.cpp  FastStackTree.h  GotchaWrappers.cpp  SimpleGPUMallocMap.cpp
src/Autocorrect/mutator/: CMakeLists.txt  Main.cpp
src/MemGraphBuild/mutatee/: AllocationTracker.cpp  AllocationTracker.h  CMakeLists.txt  GotchaWrappers.c  GotchaWrappers.cpp  MemGraph.cpp  MemGraph.h  MemGraphFilenames.h  SyncDetector.c  SyncDetector.h
src/MemGraphBuild/mutator/: CMakeLists.txt  Main.cpp
src/SyncDetector/mutatee_lib/: CMakeLists.txt  CPPLocker.cpp  CPPLocker.h  GotchaWrappers.c  SignalHandler.c  SyncDetector.c  SyncDetector.h
src/SyncDetector/mutator/: CMakeLists.txt  GenerateAutocorrect.cpp  GenerateAutocorrect.h  Main.cpp
src/analysis/: BuildSinglePoint.py  CMakeLists.txt  CheckLSDecode.py  CompareOutputs.py  DisplayFormatter.py  Driver.py  Driver2.py  DumpHexFile.py  FI_TraceBin.py  LS_TraceBin.py  MoveResults.py  ReadExecTime.py  ReadStackFiles.py  SequentialDump.py  SetupRunDir.py  TF_trace.py  TemplateFolder.py  View1.py  View2.py  View3.py  View4.py  View5.py  View6.py  cudaFunctions.txt
src/analysis/art2/: ArtDelay2  ArtDelay2.base.out  ArtDelay2.stacktrace.out  ArtDelay2.time.out  LS_log.txt  LS_stackkey.txt  LS_tracekey.txt  PM_totaltime.txt  TF_timekey.txt  launch_inst.sh  pluginlist.txt  stackOut.4116.key  synch_log.out
src/analysis/art_simple/: ArtDelay  ArtDelay.base.out  ArtDelay.stacktrace.out  ArtDelay.time.out  ArtificialDelay.cu  LS_log.txt  LS_tracekey.txt  PM_totaltime.txt  TF_timekey.txt  gmon.out  launch_inst.sh  stackOut.3340.key
src/analysis/useafter/: LS_log.txt  LS_stackkey.txt  LS_tracekey.txt  TF_timekey.txt
src/common_lib/: AllocationTracker.cpp  AllocationTracker.h  CMakeLists.txt  CPPStackTree.h  CVector.c  CVector.h  CaptureProcMap.c  CaptureProcMap.h  FileIO.c  FileIO.h  HashMap.c  HashMap.h  PageLocker.c  PageLocker.h  ReadStackKeys.c  ReadStackKeys.h  SkipList.c  SkipList.h  StackTrie.c  StackTrie.cpp  StackTrie.h  Stackwalk.c  Stackwalk.h
src/common_lib/examples/: CMakeLists.txt  TestHashMap.c  TestSkipList.c  TestStackTrie.c
src/deduplicate/: CMakeLists.txt  CUPTIEventHandler.cpp  CUPTIEventHandler.h  CalculateDedupSavings.cpp  CalculateDedupSavings.h  CalculateMain.cpp  CudaDeviceWrappers.cpp  CudaWrapper.h  DestinationHash.cpp  DestinationHash.h  DuplicateTracker.cpp  DuplicateTracker.h  HashData.cpp  HashData.h  InstrumentBase.cpp  InstrumentBase.h  InstrumentFactory.cpp  InstrumentFactory.h  Restructure.h  StacktraceGen.cpp  StacktraceGen.h  TransferBase.cpp  TransferBase.h  TransferTimeline.cpp  TransferTimeline.h  strace.cpp  strace.h  tmp.cpp
src/deduplicate/defs/: Deduplicate.def.in  DetectDuplicates.def.in
src/deduplicate/old/: deduplicator.cpp  deduplicator.h
src/deduplicate/support/: Calculate.py  CalculateSavings.py  CalculateTS.py  CorrelationRun.py  FileClasses.py  GenCorrelation.py  GenDriverCIBs.py.in  GenRuntimeCIBs.py.in  Iterators.py  MatchIDs.py  ProcessSplit.py  ReadCUPTIEvents.py  ReadTimeline.py  ReadTimingEvents.py  TestRun.py  dedup_timeline.txt  timing_info.txt  timing_packet_corr.txt
src/driverapi/: CMakeLists.txt  DriverAPIHeader.h  DriverAPIWrappers.cpp  DriverWrapperBase.cpp  DriverWrapperBase.h  DriverWrapperFactory.cpp  DriverWrapperFactory.h  HelperFunctions.h  InterpositionHeader.h  InterpositionWrappers.cpp  MemoryTransfer.cpp  MemoryTransfer.h  Parameters.cpp  Parameters.h  PluginCommon.h  StackTraceGen.cpp  StackTraceGen.h  StubLib.cpp  dlsym_wrapper.cpp
src/driverapi/defs/: Backupdef.def  DriverAPIWrapper.def.in
src/driverapi/launcher/: APICaptureInstrimentation.cpp  APICaptureInstrimentation.h  BPatchBinary.cpp  BPatchBinary.h  BinaryLocationIDMap.cpp  BinaryLocationIDMap.h  CMakeLists.txt  CallTracingFunctions.skip  CallTracingModules.skip  CallTransformation.cpp  CallTransformation.h  DebugInstrimentationTemp.cpp  DebugInstrimentationTemp.h  DetectDuplicateStackpoints.h  DynOpsClass.cpp  DynOpsClass.h  DyninstCallsite.cpp  DyninstCallsite.h  DyninstFunction.cpp  DyninstFunction.h  DyninstFunctionWraps.cpp  DyninstFunctionWraps.h  DyninstIncludes.h  DyninstProcess.cpp  DyninstProcess.h  FixCudaFree.cpp  FixCudaFree.h  FixCudaProblems.cpp  FixCudaProblems.h  InstrimentationTracker.cpp  InstrimentationTracker.h  LaunchIdentifySync.cpp  LoadStoreFunctions.skip  LoadStoreInst.cpp  LoadStoreInst.h  LoadStoreInstrimentation.cpp  LoadStoreInstrimentation.h  LoadStoreModules.skip  LocateCudaSynchronization.cpp  LocateCudaSynchronization.h  (+33 more)
src/driverapi/plugins/: CMakeLists.txt
src/driverapi/support/: BuildGetParamsHeaders.py  BuildInterpositionWrappers.py  BuildWrappers.py  DefinitionHeader.txt  DumpCudaDriverAPI.py  ExternTemplate.txt  GetParamsTest.cpp  (+6 more)
src/dyninst_common_lib/: AddressSymbolizer.cpp  AddressSymbolizer.h  BinaryAddress.h  CMakeLists.txt  CommonDefines.h  CommonDefines.h.in  DynHelper.cpp  DynHelper.h  DyninstBinaryEdit.cpp  DyninstBinaryEdit.h  DyninstEntryExit.cpp  DyninstEntryExit.h  DyninstOneTime.cpp  DyninstOneTime.h  DyninstProcess.cpp  DyninstProcess.h  FPStackWalker.cpp  FPStackWalker.h  ParseProcMap.cpp  ParseProcMap.h  ReadStacks.cpp  ReadStacks.h  SymbolInfo.cpp  SymbolInfo.h
src/inst_lib/: CMakeLists.txt  inst.cpp  inst.h
src/scripts/: BuildInstrimentation.sh.in  CMakeLists.txt  SetEnv.sh.in  inst_app.sh.in
src/tests/: BaseTesting.h  CMakeLists.txt  DestHashCheck.cpp  DestHashCheck.h  DumpFunctionNames.cpp  DyninstSanity.cpp  FindPtrFunctions.cpp  GenStacktraceThirdParty.cpp  GetCalledFuncs.cpp  GetExportTableTest.cpp  LoadSpackModules.py.in  PerfEstimateCheck.cpp  RunTests.sh.in  SmallModify.cpp  TestDedupSavings.cpp  TestDedupSavings.h  TestInstrimentation.cpp  TimelineChecker.h  TitanTestScript.ksh.in  basic_checker_test.cpp  cupti_test.cpp  dedup_test_configure.conf  launch_check.cpp  timeline_checker.cpp
(+123 files in other folders)
