cmake_minimum_required (VERSION 3.1)
set(default_build_type "RelWithDebInfo")
set(CMAKE_BUILD_TYPE "${default_build_type}" CACHE
      STRING "Choose the type of build." FORCE)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_C_STANDARD 11)
include(${CMAKE_ROOT}/Modules/ExternalProject.cmake)
project(diogenes_c)
find_package(Boost COMPONENTS system thread unit_test_framework REQUIRED)
find_package(CUDA REQUIRED)
include(${CMAKE_SOURCE_DIR}/FindGotcha.cmake)
include(${CMAKE_SOURCE_DIR}/DyninstInstall.cmake)
add_compile_options("-funwind-tables" "-g")


if (NOT DEFINED LIBUNWIND_INSTALL_DIR)
	message(ERROR " Set -DLIBUNWIND_INSTALL_DIR= to the directory libunwind is installed in")
endif(NOT DEFINED LIBUNWIND_INSTALL_DIR)

add_subdirectory(${CMAKE_SOURCE_DIR}/src/common_lib)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/SyncDetector)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/dyninst_common_lib)
#add_subdirectory(${CMAKE_SOURCE_DIR}/src/inst_lib)

#add_subdirectory(${CMAKE_SOURCE_DIR}/src/deduplicate)
#add_subdirectory(${CMAKE_SOURCE_DIR}/src/python_wrapper)
#add_subdirectory(${CMAKE_SOURCE_DIR}/src/scripts)
#add_subdirectory(${CMAKE_SOURCE_DIR}/src/tests)
#add_subdirectory(${CMAKE_SOURCE_DIR}/src/driverapi)
#add_subdirectory(${CMAKE_SOURCE_DIR}/src/analysis)