install(FILES ${PROJECT_SOURCE_DIR}/src/analysis/Driver.py 
		${PROJECT_SOURCE_DIR}/src/analysis/DumpHexFile.py
		${PROJECT_SOURCE_DIR}/src/analysis/LS_TraceBin.py
		${PROJECT_SOURCE_DIR}/src/analysis/TF_trace.py
		${PROJECT_SOURCE_DIR}/src/analysis/FI_TraceBin.py
		${PROJECT_SOURCE_DIR}/src/analysis/Driver2.py
		${PROJECT_SOURCE_DIR}/src/analysis/View1.py
		${PROJECT_SOURCE_DIR}/src/analysis/View2.py
		${PROJECT_SOURCE_DIR}/src/analysis/View3.py
		${PROJECT_SOURCE_DIR}/src/analysis/View4.py
		${PROJECT_SOURCE_DIR}/src/analysis/View6.py
		${PROJECT_SOURCE_DIR}/src/analysis/TemplateFolder.py
		${PROJECT_SOURCE_DIR}/src/analysis/DisplayFormatter.py
		${PROJECT_SOURCE_DIR}/src/analysis/SequentialDump.py
		${PROJECT_SOURCE_DIR}/src/analysis/BuildSinglePoint.py
		${PROJECT_SOURCE_DIR}/src/analysis/ReadStackFiles.py
		${PROJECT_SOURCE_DIR}/src/analysis/CheckLSDecode.py
		${PROJECT_SOURCE_DIR}/src/analysis/CompareOutputs.py
		${PROJECT_SOURCE_DIR}/src/analysis/MoveResults.py
		${PROJECT_SOURCE_DIR}/src/analysis/SetupRunDir.py
		${PROJECT_SOURCE_DIR}/src/analysis/cudaFunctions.txt
		DESTINATION bin)